Add: finalized bivariate copulas

--- a/002_LaTeX/Parent.tex
+++ b/002_LaTeX/Parent.tex
@@ -63,7 +63,9 @@
 \input{wielowymiarowe_zmienne_losowe}
 \input{modele_kopulowe}
 \input{spread_na_rynkach_finansowych}
+\input{zastosowanie_do_danych}
 \input{podsumowanie}
+
 
 % \appendix
 % \chapter{----}
