--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -254,3 +254,54 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	title = {Revisions to the Basel II Market Risk Framework},
 	year = {2010},
 }
+
+@article{AssymetricEquityDependency,
+	author = {Vaz de Melo Mendes, Beatriz},
+	title = {Asymmetric extreme interdependence in emerging equity markets},
+	journaltitle = {Applied Stochastic Models in Business and Industry},
+	year = {2005},
+}
+
+@article{Frees1998,
+	title={Understanding relationships using copulas},
+	author={Frees, Edward W. and Valdez, Emiliano A.},
+	year={1998}
+}
+
+@article{Clayton1972,
+	author = {Clayton, D. G.},
+	journal = {Biometrika},
+	title = {A Model for Association in Bivariate Life Tables and Its Application in Epidemiological Studies of Familial Tendency in Chronic Disease Incidence},
+	volume = {65},
+	year = {1978}
+}
+
+@article{Hougaard1986,
+	author = {Hougaard, Philip},
+	title = "{A class of multivariate failure time distributions}",
+	journal = {Biometrika},
+	volume = {73},
+	number = {3},
+	year = {1986},
+	month = {12},
+}
+
+
+@article{Jianwei2021,
+	author = {Gao, Jianwei and Yang, Yu and Gao, Fangjie and Liang, Pengcheng},
+	title = {Optimization of Electric Vehicles Based on Frank-Copula-GlueCVaR Combined Wind and Photovoltaic Output Scheduling Research},
+	journal = {Energies},
+	volume = {14},
+	year = {2021},
+	number = {19}
+}
+
+@article{Matus2019,
+	author={Matus, Omar and Barrera, Javiera and Moreno, Eduardo and Rubino, Gerardo},
+	journal={IEEE Transactions on Reliability}, 
+	title={On the Marshall–Olkin Copula Model for Network Reliability Under Dependent Failures}, 
+	year={2019},
+	volume={68},
+	number={2},
+	pages={451-461},
+	doi={10.1109/TR.2018.2865707}}
