--- a/002_LaTeX/streszczenie.tex
+++ b/002_LaTeX/streszczenie.tex
@@ -1,9 +1,9 @@
 \begin{streszczenie}
 	Spready grają dziś ogromną rolę na rynkach finansowych. Służą inwestorom, spekulantom i zarządzającym ryzykiem do oceny potencjalnych zysków z inwestycji, implikowania zmiennych rynkowych, czy kontrolowania ekspozycji na ryzyko. W pracy prezentujemy modele kopułowe jako narzędzia odpowiednie do statystycznej analizy współzależności między komponentami spreadu. 
 	
-	Literatura bogata jest w przykłady zastosowania dwuwymiarowych kopuł do modelowania dwuwymiarowych spreadów. Te modele, oparte o połączenie analizy szeregów czasowych oraz modelowania reziduów przy pomocy kopuł stały się jednym z klasycznych podejść do problemu wyceny instrumentów pochodnych na spread. Na początku lat 2000 dodatkowo rozwinęła się teoria modeli Vine Copula, pozwalających na elastyczny opis zależności wielowymiarowych. Od tamtego czasu konsekwentnie odnoszą one sukcesy w modelowaniu zjawisk w wielu dziedzinach nauki, od lotnictwa, przez biologię po finanse. Mimo tego, literatura dotycząca aplikacji Vine Copula do modelowania wielowymiarowych spreadów jest zdecydowanie ograniczona. 
+	Literatura bogata jest w przykłady zastosowania dwuwymiarowych kopuł do modelowania dwuwymiarowych spreadów. Te modele, oparte o połączenie analizy szeregów czasowych oraz modelowania reziduów przy pomocy kopuł stały się jednym z klasycznych podejść do problemu wyceny instrumentów pochodnych na spread. Na początku lat 2000 dodatkowo rozwinęła się teoria modeli Vine Copula, pozwalających na elastyczny opis zależności wielowymiarowych. Od tamtego czasu konsekwentnie odnoszą one sukcesy w modelowaniu zjawisk w wielu dziedzinach nauki: od lotnictwa, przez biologię po finanse. Mimo tego, literatura dotycząca aplikacji Vine Copula do modelowania wielowymiarowych spreadów jest zdecydowanie ograniczona. 
 	
-	Praca poszerza literaturę Vine Copula o aplikację tych modeli do spreadu na 3 aktywa. Prezentujemy niezbędną teorię, oraz pokazujemy w jaki sposób zbudować symulacyjny model dla soybean crush spread, w którym numerycznie wyceniamy europejskie opcje na soybean crush spread. 
+	Praca poszerza literaturę Vine Copula o aplikację tych modeli do spreadu na 3~aktywa. Prezentujemy niezbędną teorię, oraz pokazujemy w jaki sposób zbudować symulacyjny model dla soybean crush spread, w którym numerycznie wyceniamy europejskie opcje na ten rodzaj spreadu. 
 \end{streszczenie}
 
 \begin{abstract}
