--- a/002_LaTeX/zmienne_losowe.tex
+++ b/002_LaTeX/zmienne_losowe.tex
@@ -1,6 +1,6 @@
 Rozpatrywać będziemy przestrzeń probabilistyczną $(\Omega,\mathcal{F},\Pra)$, czyli niech $\Omega$ to pewien niepusty zbiór, $\mathcal{F}$ to $\sigma$-ciało zdarzeń losowych, a $\Pra$ to funkcja $\Pra\colon\Omega\rightarrow[0,1]$. 
 
-\begin{df}[\textit{n}-wymiarowa zmienna losowa]\cite{Rachunek_prob}
+\begin{df}[\textit{n}-wymiarowa zmienna losowa]
 	\label{df:n_wym_zmienna_losowa}
 	\textit{n}-wymiarową zmienną losową nazywamy funkcję określoną na przestrzeni zdarzeń elementarnych $\Omega$ i przyjmującą wartości rzeczywiste:
 	
@@ -41,7 +41,7 @@ Warto wspomnieć, że istnieją również użyteczne rozkłady, które nie dają
 	\caption{Przykładowe gęstości zmiennych losowych z tabeli \ref{tab:przykladowe_zmienne_losowe}.\label{fig:przykladowe_zmienne_losowe}}
 \end{figure}
 
-Do opisu zmiennych losowych \emph{wielo}wymiarowych, oprócz gęstości łącznej rozkładu wyróżniamy dodatkowo gęstości warunkowe i brzegowe. Opisują one jak zachowuje się współrzędna wektora losowego, jeśli pozostałe przyjmą pewne wartości, lub kompletnie wyłączając ich wpływ.
+Do opisu zmiennych losowych \emph{wielo}wymiarowych, oprócz gęstości łącznej rozkładu wyróżniamy dodatkowo gęstości warunkowe i brzegowe. Opisują one jak zachowuje się współrzędna wektora losowego, jeśli pozostałe z nich przyjmą pewne wartości, lub jeśli kompletnie wyłączymy ich wpływ.
 
 \begin{df}[Rozkłady brzegowy]
 	Rozpatrzmy d-wymiarową zmienną losową $\mathbf{X} = [X_1, X_2, \dots, X_d]$ o gęstości $f(x_1, \dots, x_d)$. Gęstość rozkładu brzegowego $X_j$ definiujemy jako:
