--- a/002_LaTeX/podsumowanie.tex
+++ b/002_LaTeX/podsumowanie.tex
@@ -1,3 +1,3 @@
-\begin{wstep}[Wprowadzenie]    % ew. \begin{wstep}[Wprowadzenie]
+\begin{wstep}[Wnioski]    % ew. \begin{wstep}[Wprowadzenie]
 	
 \end{wstep}
