--- a/002_LaTeX/spread_na_rynkach_finansowych.tex
+++ b/002_LaTeX/spread_na_rynkach_finansowych.tex
@@ -1,6 +1,8 @@
 \chapter{Spready na rynkach finansowych}
 
-Some text in the first chapter
+\section{Popularne rodzaje spreadów}
+\section{Modelowanie spreadów}
+\section{Model kopułowy}
 
 
 \mgrclosechapter
