Add: descriptions of spreads

--- a/002_LaTeX/bibliography.bib
+++ b/002_LaTeX/bibliography.bib
@@ -77,9 +77,6 @@ pages={229--231},
 year={1959}
 }
 
-%% TODO
-% Find something with a comprehensive list of copula families
-
 % Base citation for most of the mathematical theorems
 @book{Cherubini_Copula_Methods_in_Finance,
 author = {Cherubini, Umberto and Luciano, Elisa and Vecchiato, Walter},
@@ -250,7 +247,7 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 }
 
 @manual{BaselII,
-	author = {BCBS},
+	author = {{The Basel Committee on Banking Supervision}},
 	title = {Revisions to the Basel II Market Risk Framework},
 	year = {2010},
 }
@@ -305,3 +302,57 @@ url="https://doi.org/10.1007/978-1-4757-2763-0_14"
 	number={2},
 	pages={451-461},
 	doi={10.1109/TR.2018.2865707}}
+
+@online{PetroleumForecasts,
+	author = {{U.S. Energy Information Administration}},
+	title = {Short-Term Energy Outlook},
+	year={2022},
+	month={08},
+	date = {12/08/2022},
+	url = {https://www.eia.gov/outlooks/steo/report/global_oil.php},
+}
+
+
+@article{spread_hedging,
+	AUTHOR = {Halkos, George E. and Tsirivis, Apostolos S.},
+	TITLE = {Energy Commodities: A Review of Optimal Hedging Strategies},
+	JOURNAL = {Energies},
+	VOLUME = {12},
+	YEAR = {2019},
+	NUMBER = {20},
+	ARTICLE-NUMBER = {3979},
+	URL = {https://www.mdpi.com/1996-1073/12/20/3979},
+	ISSN = {1996-1073},
+	DOI = {10.3390/en12203979}
+}
+
+@article{Carmona_Clean_Spreads,
+	author = {Carmona, Rene and Coulon, Michael and Schwarz, Daniel},
+	year = {2012},
+	month = {12},
+	pages = {1951-1965},
+	title = {The Valuation of Clean Spread Options: Linking Electricity, Emissions and Fuels},
+	volume = {12},
+	journal = {Quantitative Finance},
+	doi = {10.1080/14697688.2012.750733}
+}
+
+@book{Fixed_Income,
+	author = {Choudhry, Moorad},
+	title = {Fixed-income securities and derivatives handbook},
+	year = {2005},
+}
+
+@article{Agro_Spreads,
+	author = {Barrett, W. Brian and Kolb, Robert W.},
+	title = {Analysis of spreads in agricultural futures},
+	journal = {Journal of Futures Markets},
+	volume = {15},
+	number = {1},
+	pages = {69-86},
+	doi = {https://doi.org/10.1002/fut.3990150107},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/fut.3990150107},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/fut.3990150107},
+	year = {1995}
+}
+
