--- a/002_LaTeX/spread_na_rynkach_finansowych.tex
+++ b/002_LaTeX/spread_na_rynkach_finansowych.tex
@@ -1,8 +1,15 @@
 \chapter{Spready na rynkach finansowych}
+\input{spreads_intro}
+
 
 \section{Popularne rodzaje spreadów}
+\input{popularne_spready}
+
 \section{Modelowanie spreadów}
+\input{modele_spreadow}
+
 \section{Model kopułowy}
+\input{model_kopulowy_spreadu}
 
 
 \mgrclosechapter
